[package]
name = "tetrust"
version = "0.1.0"
authors = ["Jean Leprolo <undeuxtroll@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"

[dependencies.sdl2]
version = "*"
features = ["image"]
